[package]
name = "async-h1-2"
version = "2.4.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/http-rs/async-h1"
documentation = "https://docs.rs/async-h1"
description = "Asynchronous HTTP 1.1 parser."
keywords = ["async", "http", "stream", "parser", "http1"]
categories = [
  "asynchronous",
  "parser-implementations",
  "web-programming",
  "web-programming::http-client",
  "web-programming::http-server"
]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
async-channel = "1.9"
async-dup = "1.2"
async-global-executor = "2.4"
async-io = "1.13"
futures-lite = "1.13"
http-types = { version = "3.1.0", package = "http-types-2", default-features = false }
httparse = "1.9"
log = "0.4"
pin-project = "1.1"

[dev-dependencies]
async-std = { version = "1.13", features = ["attributes"] }
pretty_assertions = "1.4"
